--- a/_config.yml
+++ b/_config.yml
@@ -22,16 +22,16 @@ repository               : "ethanli24.github.io"
 author:
   # Biographic information
   name             : "Zhen (Ethan) Li"
-  avatar           : "profile.jpg"
+  avatar           : "profile.png"
   bio              : "First-year PhD student at PolyU"
-  location         : "Hong Kong SAR, China"
+  location         : "Kowloon, Hong Kong SAR"
   # employer         : "The Hong Kong Polytechnic University"
   uri              : # URL
   email            : ethan-zhen.li@connect.polyu.hk
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : https://scholar.google.com/citations?user=7_X_dqMAAAAJ
+  googlescholar    : https://scholar.google.com/citations?user=scoH7IYAAAAJ&hl=en
   github           : EthanLI24
   # impactstory      : # URL
   # orcid            : "http://orcid.org/yourorcidurl"
