--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : https://www.linkedin.com/in/zhen-li-78914a277/
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
