--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "ethanli24.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  name             : "Zhen (Ethan) Li"
+  name             : "Zhen (Ethan) LI
   avatar           : "profile.png"
   bio              : "First-year PhD student at PolyU"
   location         : "Kowloon, Hong Kong SAR"
